GH-1: Fix test (why was that necessary?)